Make logging level change javascript console level, fix radio buttons not showing correctly

--- a/octoprint_drybox_sensor/static/css/drybox_sensor.css
+++ b/octoprint_drybox_sensor/static/css/drybox_sensor.css
@@ -1,22 +1,47 @@
 /* TODO: Have your plugin's CSS files generated to here. */
 
-.drybox_warn {
+@keyframes constantFade {
+    from {
+        background-color: green;
+    }
+    to {
+        background-color: blue;
+    }
+}
+
+@keyframes constantRotateX {
+    from {
+        transform: rotateX(0);
+    }
+    to {
+        transform: rotateX(180deg);
+    }
+}
+
+@keyframes constantRotateY {
+    from {
+        transform: rotateY(0);
+        border-radius: 32px;
+    }
+    to {
+        transform: rotateY(90deg);
+        border-radius: 0px;
+    }
+}
+
+
+
+.drybox-warn {
   color: orange;
   font-weight: bolder;
 }
 
-.drybox_error {
+.drybox-error {
   color: red;
   font-weight: bolder;
 }
 
-#drybox-history-scroll {
-  max-height: 200px;
-  width: 330px;
-  overflow-y: scroll;
-}
-
-#drybox-history-div {
+#drybox_history_div {
   float: left;
   position: absolute;
   background-color: white;
@@ -28,21 +53,18 @@
   width: 50pc;
 }
 
-#drybox-graph {
+#drybox_graph {
   width:100%;
   height:300px;
 }
 
-#drybox-graph-legend {
-  position: absolute;
-  bottom:60px;
-  left: 20px;
+#drybox_graph.db-behind {
+    opacity: 0.1;
 }
 
-#drybox-graph-legend div {
-  height: 20px;
+#drybox_graph_title {
+    text-align: center;
 }
-
 
 .drybox-histlist li{
   list-style-type: none;
@@ -80,6 +102,7 @@
 }
 
 
+
 .drybox-graph-input {
     width: 100%;
     display: flex;
@@ -107,6 +130,14 @@
     height: fit-content;
 }
 
+#drybox_tspan button {
+    flex: 1 1 auto;
+}
+
+#drybox_tspan button.db_active {
+    border: 3px black solid;
+}
+
 
 .drybox-graph-input label {
     flex: 1 0 auto;
@@ -115,6 +146,20 @@
     font-size: 1.1em;
     align-content: center;
 }
+
+#drybox_spinner {
+    width: 64px;
+    height: 64px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    animation-composition: add;
+    animation: constantFade 0.3s infinite alternate,
+           constantRotateX linear 1s infinite alternate,
+           constantRotateY linear 2s infinite alternate;
+}
+
+
 
 
 
